Fixed main page alignment

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -13,6 +13,10 @@
 .italic {
   font-style: italic;
 }
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   font-size: 16px;
   height: 100%;
@@ -22,21 +26,22 @@ body {
 .navbar {
   margin-bottom: 0;
 }
-.navbar .container-fluid {
+.container-fluid {
   padding: 0;
 }
 #logo img {
   width: 100px;
   height: 50px;
 }
-#sidebar-left {
+.sidebar-left {
   width: 100px;
-  height: 100vh;
+  height: calc(100% - 50px);
   background-color: #d6d6d6;
-  display: inline-flex;
+  float: left;
 }
-#content {
-  display: inline-flex;
-  width: 90vw;
-  height: 100vh;
+.content {
+  width: calc(100% - 100px);
+  height: calc(100% - 50px);
+  overflow-y: auto;
+  float: left;
 }
